Debut du projet

--- a/index.html
+++ b/index.html
@@ -16,11 +16,23 @@
 
 <body>
     <div class="main-container">
-        <header></header>
+        <header>
+            <nav>
+                <a href="index.html" class="lien-icone">
+                    <img src="images/logo/Booki.png" alt="Logo Booki">
+                </a>
+                <div>
+                    <a href="">Hébergements</a>
+                    <a href="">Activités</a>
+                </div>
+            </nav>
+        </header>
         <main>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
-
+                    <div class="hebergements-title">
+                        <h2 class="section-title">Hébergements à Marseille</h2>
+                    </div>
                 </section>
                 <section class="populaires">
                     <div class="populaires-title">
@@ -85,6 +97,13 @@
                                 </div>
                             </article>
                         </a>
+                    </div>
+                </section>
+            </div>
+            <div class="Activites à Marseille">
+                <section class="Activites">
+                    <div class="Activites-title">
+                        <h2 class="section-title">Activités à Marseille</h2>
                     </div>
                 </section>
             </div>
