Avancé sur le responsive mobile et tablette

--- a/index.html
+++ b/index.html
@@ -46,22 +46,26 @@
                 <p class="info-subtitle">En plein centre-ville ou en nature</p>
             </div>
             <div class="search-bar">
-                <form action="#" method="post">
+                <form>
                     
                         <div class="localisation">
                             <i class="fa-solid fa-location-dot"></i>
                         </div>
-                        <input type="search"  placeholder="Marseille,France">
-                        <input type="submit" value="Rechercher">
-                        
+                        <input type="search"  value="Marseille,France" placeholder="Ville">
+                        <button>
+                            <span class="recherche">Rechercher</span>
+                            <span class="iconeRecherche"><i class="fa-solid fa-magnifying-glass"></i></span>
+                        </button>
                 </form> 
             </div>
             <div class="filtres">
                 <h3>Filtres</h3>
-                <div class="FiltresTextIcone"><i class="fa-solid fa-money-bill-wave "></i><h3 class="text">Economique</h3></div>
-                <div class="FiltresTextIcone"><i class="fa-solid fa-child "></i><h3 class="text">Familial</h3></div>
-                <div class="FiltresTextIcone"><i class="fa-solid fa-heart "></i><h3 class="text">Romantique</h3></div>
-                <div class="FiltresTextIcone"><i class="fa-solid fa-fire "></i><h3 class="text">Nos pépites</h3></div>
+                <div class="Categorie">
+                    <div class="FiltresTextIcone"><i class="fa-solid fa-money-bill-wave "></i><h3 class="text">Economique</h3></div>
+                    <div class="FiltresTextIcone"><i class="fa-solid fa-child "></i><h3 class="text">Familial</h3></div>
+                    <div class="FiltresTextIcone"><i class="fa-solid fa-heart "></i><h3 class="text">Romantique</h3></div>
+                    <div class="FiltresTextIcone"><i class="fa-solid fa-fire "></i><h3 class="text">Nos pépites</h3></div>
+                </div>
             </div>
             <div class="info-bar"><i class="fa-solid fa-info"></i><p class="info-bar-text">Plus de 500 logements sont disponibles dans cette ville</p></div>
         </section>
@@ -254,7 +258,7 @@
                     <div class="card-txt">
                       <h3 class="card-title">Hôtel Le soleil du matin</h3>
                       <p class="card-subtitle">
-                        Nuit à partir de 128<span class="euro">€</span>
+                        Nuit à partir de 25<span class="euro">€</span>
                       </p>
                     </div>
                     <div class="card-rating">
@@ -405,7 +409,7 @@
             <ul class="list-footer">
                 <h3>Assistance</h3>
                 <li>Centre d'aide</li>
-                <li>Nous contacter</li>
+                <a href="mailto:Booki@hotmail.fr"><li>Nous contacter</li></a>
             </ul>
         </div>
       </footer>
