Modification footer pour validation W3C html & css

--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
       <footer>
         <div>
           <ul class="list-footer">
-            <h3>À propos</h3>
+            <li><h3>À propos</h3></li>
             <li>Fonctionnement du site</li>
             <li>Conditions générales</li>
             <li>Données et confidentialité</li>
@@ -432,16 +432,16 @@
         </div>
         <div>
           <ul class="list-footer">
-            <h3>Nos hébergements</h3>
+            <li><h3>Nos hébergements</h3></li>
             <li>charte qualité</li>
             <li>Proposer votre hôtel</li>
           </ul>
         </div>
         <div>
           <ul class="list-footer">
-            <h3>Assistance</h3>
+            <li><h3>Assistance</h3></li>
             <li>Centre d'aide</li>
-            <a href="mailto:Booki@hotmail.fr"><li>Nous contacter</li></a>
+            <li><a href="mailto:Booki@hotmail.fr">Nous contacter</a></li>
           </ul>
         </div>
       </footer>
