form en format mobile

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 placeholder="Votre Ville"
               />
               <button type="button">
-                <span class="search">Rechercher</span>
+                <span class="search-button">Rechercher</span>
                 <span class="icone-search"
                   ><i class="fa-solid fa-magnifying-glass"></i
                 ></span>
