Ajustement Varaible color et Activites

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <p class="info-subtitle">En plein centre-ville ou en nature</p>
           </div>
           <div class="search-bar">
-            <form>
+            <form class="form">
               <div class="location">
                 <i class="fa-solid fa-location-dot"></i>
               </div>
@@ -365,13 +365,13 @@
           </section>
         </div>
         <!--Section Activites-->
-        <section class="Activites">
-          <div class="Activites-title">
+        <section class="activites">
+          <div class="activites-title">
             <h2 id="AncreActivites" class="section-title">
               Activités à Marseille
             </h2>
           </div>
-          <div class="Activites-card">
+          <div class="activites-card">
             <a href="#">
               <article class="card">
                 <img
