--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </form>
           </div>
           <div class="filtres">
-            <h3>Filtres</h3>
+            <h3 class="filtres-title">Filtres</h3>
             <div class="category">
               <div class="filtres-text-icone">
                 <i class="fa-solid fa-money-bill-wave"></i>
